Changelog
=========

0.8.3 - 
------------------

- Dependency updates.
  [ggozad]

- Improve visibility of labels in the modals.
  [ggozad]

0.8.2 - 2025-02-03
------------------

- Fix merging chat and additional options properly.
  [ggozad]

0.8.1 - 2025-01-29
------------------

- Support for thinking models (e.g. DeepSeek R1).
  [liorm]

0.8.0 - 2025-01-19
------------------

- Support for Model Context Protocol(MCP) tools.
  [ggozad]

- Simplify Config(), base it on pydantic's BaseModel.
  [ggozad]

0.7.3 - 2025-01-07
------------------

- Fix parameter parsing / Options bug
  [lorenmh]

0.7.2 - 2025-01-03
------------------

- Ability to add custom tools!
  [ggozad]

- Add a web tool, giving Ollama access to the web.
  [ggozad] 

0.7.1 - 2025-01-02
------------------

- Support for Ollama's structured output. 
  Use the `format` parameter to specify the output format as a JSON schema.

- Ability to clear a chat, removing all messages.
  [ggozad]

0.7.0 - 2024-12-29
------------------

- Enforce foreign key constraints in the sqlite db, to allow proper cascading deletes.
  [ggozad]

- Perist images in the chat history & sqlite db.
  [ggozad]

- Update OllamaLLM client to match the use of Pydantic in olllama-python.
  [ggozad]

- Gracefully handle exceptions in tools.
  [ggozad]

- Fix documentation on keymap example in the readme.
  [bartosz]

- Update the shortcuts for new chat and close chat.
  [pekcheey]


0.6.9 - 2024-11-23
------------------

- Simplify aiosql usage.
  [ggozad]

0.6.8 - 2024-11-20
------------------

- Fixed styling bug that obscured the chat tabs.
  [ggozad]

0.6.7 - 2024-11-19
------------------

- Support all textual built-in themes.
  [ggozad]

0.6.6 - 2024-11-13
------------------

- Replace can_view with can_view_partial following changes to Widget in textual.
  [ggozad]

0.6.5 - 2024-10-12
------------------

- Allow customizing select key bindings.
  [ggozad]

- Fixed erroneous OLLAMA_URL documentaion.
  [gerroon] 
